# Android-WQX-Emulator

./: .gitignore  README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gmail_hackwaly_nc1020_NC1020_JNI.c  gmail_hackwaly_nc1020_NC1020_JNI.cpp  gmail_hackwaly_nc1020_NC1020_JNI.h  org_liberty_android_nc1020emu_NC1020JNI.c  org_liberty_android_nc1020emu_NC1020JNI.h
app/src/main/cpp/wqx/: cpu6502.c  cpu6502.h  nc1020.c  nc1020.cpp  nc1020.h  nc1020_io.c  nc1020_io.h  nc1020_states.h
app/src/main/java/gmail/hackwaly/nc1020/: NC1020Activity.java  NC1020JNI.java  NC1020KeypadView.java  NC1020_Activity.java
app/src/main/java/org/liberty/android/nc1020emu/: KeypadLayout.java  KeypadLayout.kt  MainActivity.java  MainActivity.kt  MainFragment.java  MainFragment.kt  NC1020Activity.java  NC1020JNI.java  NC1020JNI.kt  NC1020KeypadView.java  SettingsFragment.java  SettingsFragment.kt
app/src/main/res/drawable/: keypad_button.xml
app/src/main/res/layout/: main.xml  main_activity.xml  main_fragment.xml
app/src/main/res/menu/: main.xml  main_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: settings.xml
gradle/wrapper/: gradle-wrapper.properties
